tests/fixtures/invalid/InvalidAttributePlacement.php
<?php

namespace App;

#[\Attribute] class InlineAttribute
{
}
